# simplicity

./: -i  .dockerignore  .gitattributes  .gitignore  Dockerfile.c  Dockerfile.coq  Dockerfile.haskell  Makefile  README.md  Simplicity-Bitcoin.cabal.delete-this-extension  Simplicity-Elements.cabal.delete-this-extension  Simplicity-TR.tm  Simplicity.Bitcoin.Haskell.nix  Simplicity.C.nix  Simplicity.Coq.nix  Simplicity.Elements.Haskell.nix  Simplicity.Haskell.nix  Simplicity.bib  Simplicity.cabal  Simplicity.cabal.delete-this-extension  _CoqProject  ascii.h  bitstream.c  bitstream.h  bitstring.h  cmr.c  compcert-opensource.nix  compcert-opensource.patch  ctx8Pruned.c  ctx8Unpruned.c  dag.c  dag.h  default.nix  deserialize.c  deserialize.h  elements-sources.mk  errorCodes.h  eval.c  eval.h  frame.c  (+41 more)
.devcontainer/: devcontainer.json
.devcontainer/nix/: devcontainer.json
.github/workflows/: ci.yml  codespell.yml
C/: CMakeLists.txt  Makefile  bitstream.c  bitstream.h  bitstring.h  bounded.h  callonce.h  cpu.c  dag.c  dag.h  deserialize.c  deserialize.h  errorCodes.h  eval.c  eval.h  frame.c  frame.h  hashBlock.c  hashBlock.h  jetTable.gperf  jetTable.h  jets-secp256k1.c  jets.c  jets.h  limitations.h  precomputed.h  prefix.h  primitive.h  rsort.c  rsort.h  schnorr0.c  schnorr0.h  schnorr6.c  schnorr8.c  schnorr8.h  schnorrAssert.h  sha256.c  sha256.h  sources.mk  tag.h  (+7 more)
C/bitcoin/: bitcoinJets.c  bitcoinJets.h  env.c  exec.c  jets.c  primitive.c  primitive.h  primitiveJetNode.inc  txEnv.h
C/elements/: elementsJets.c  exec.c
C/include/simplicity/: cpu.h  elements.h  errorCodes.h
C/include/simplicity/bitcoin/: env.h
C/include/simplicity/elements/: env.h  exec.h
C/primitive/: elements.c
C/primitive/elements/: checkSigHashAllTx1.c  checkSigHashAllTx1.h  cmr.c  env.c  exec.c  jets.c  jets.h  ops.c  ops.h  primitive.c  primitive.h  primitiveEnumJet.inc  primitiveEnumTy.inc  primitiveInitJet.inc  primitiveInitPrim.inc  primitiveInitTy.inc  primitiveJetNode.inc  txEnv.h
C/secp256k1/: README.md  ecmult_impl.h  field.h  field_10x26_impl.h  field_5x52_impl.h  field_5x52_int128_impl.h  field_impl.h  group.h  group_impl.h  int128.h  int128_impl.c  int128_impl.v  int128_native_impl.h  int128_struct_impl.h  modinv32.h  modinv32_impl.h  modinv64.h  modinv64_impl.h  precomputed_ecmult.h  scalar_4x64_impl.h  scalar_8x32_impl.h  scalar_impl.h  schnorrsig_impl.h  secp256k1.h  secp256k1_impl.h  util.h  verif_int128_impl.v
C/wrappedJets/: coreJets.c  wrappers.h
C/wrappedJets/elements/: jets.c
Coq/: _CoqProject
Coq/C/: divstep.v  extraMath.v  extraVST.v  jets_secp256k1.v  modinv.v  progressC.v
Coq/C/secp256k1/: int128_impl.v  spec_field_5x52.v  spec_int128.v  spec_modinv64.v  verif_field_5x52_int128_impl.v  verif_int128_impl.v  verif_modinv64_impl.v
Coq/Simplicity/: Alg.v  Arith.v  Assertion.v  Bit.v  BitMachine.v  Core.v  Delegation.v  Digest.v  MerkleRoot.v  Primitive.v  SHA256.v  StaticAnalysis.v  Translate.v  Ty.v  Word.v  dune  dune-project
Coq/Simplicity/Primitive/: Bitcoin.v
Coq/Simplicity/Util/: Arith.v  List.v  PackedClass.v
Coq/Util/: List.v  Monad.v  Option.v  dune  dune-project
Haskell/: Tests.hs
Haskell-Examples/: TestnetTransaction.hs
Haskell-Generate/: Benchmarks.hs  GenDecodeJet.hs  GenPrecomputed.hs  GenPrimitive.hs  GenRustJets.hs  GenTests.hs  NameWrangler.hs
Haskell-GenerateC/: GenPrecomputed.hs  GenPrimitive.hs  GenTests.hs
Haskell/Bitcoin-Adapter/Simplicity/: Primitive.hs
Haskell/Bitcoin-Adapter/Simplicity/Bitcoin/: Dag.hs  JetType.hs  Term.hs
Haskell/Bitcoin/Simplicity/Bitcoin/: DataTypes.hs  Primitive.hs
Haskell/Core/Simplicity/: Benchmarks.hs  BitMachine.hs  Bitcoin.hs  CoreJets.hs  Delegator.hs  Digest.hs  Functor.hs  MerkleRoot.hs  Serialization.hs  Tags.hs  Tensor.hs  Tree.hs  Ty.hs  Weight.hs
Haskell/Elements-Adapter/Simplicity/: Primitive.hs
Haskell/Indef/Simplicity/: Dag.hs  Inference.hs  JetType.hs  MerkleRoot.hs  Primitive.hsig  Semantics.hs  Term.hs
Haskell/Simplicity/: Arith.hs  Bit.hs  BitMachine.hs  Dag.hs  Digest.hs  Elaboration.hs  Generic.hs  Inference.hs  LensEx.hs  MerkleRoot.hs  Primitive.hs  Semantics.hs  Serialization.hs  Tensor.hs  Term.hs  Ty.hs  Word.hs
Haskell/Simplicity/Arith/: Tests.hs
Haskell/Simplicity/BitMachine/: Authentic.hs  StaticAnalysis.hs  Tests.hs  Translate.hs  Ty.hs
Haskell/Simplicity/Bitcoin/: Benchmarks.hs  Jets.hs
Haskell/Simplicity/Elements/: Benchmarks.hs  Jets.hs
Haskell/Simplicity/LibSecp256k1/: FFI.hs  Spec.hs  Types.hs
Haskell/Simplicity/Primitive/: Bitcoin.hs
Haskell/Simplicity/Programs/: Arith.hs  Bit.hs  CheckSigHashAll.hs  Generic.hs  LibSecp256k1.hs  Loop.hs  Secp256k1.hs  Sha256.hs  Tests.hs  Word.hs
Haskell/Simplicity/Serialization/: BitString.hs  ByteString.hs  Tests.hs
Haskell/Simplicity/Term/: Core.hs
Haskell/Simplicity/Ty/: Memo.hs  Word.hs
Haskell/Tests/: Elements-Tests.hs  Tests.hs
Haskell/Tests/Simplicity/: Arbitrary.hs  TestCoreEval.hs
Haskell/cbits/: bitstream.c  coreJets.c  dag.c  frame.c  jets.c  wrappers.h
Haskell/cbits/bitcoin/: env.c  jets.c
Haskell/cbits/elements/: elementsJets.c  env.c  jets.c
alectryon/: divstep.v.html  pygments.css  spec_field_5x52.v.html  spec_int128.v.html  spec_modinv64.v.html  verif_int128_impl.v.html
bitcoin/: bitcoinJets.h  txEnv.h
doc/: memorySurvey.md
elements/: primitiveEnumJet.inc
include/simplicity/: elements.h  errorCodes.h
include/simplicity/elements/: env.h  exec.h
libsha256compression/: Makefile
libsha256compression/include/sha256/: compression.h
libsha256compression/sha256/: compression.c
primitive/: elements.c
primitive/elements/: checkSigHashAllTx1.c  checkSigHashAllTx1.h  env.c  exec.c  jets.c  jets.h  ops.c  primitive.c  primitive.h  primitiveEnumJet.inc  primitiveEnumTy.inc  primitiveInitJet.inc  primitiveInitPrim.inc  primitiveInitTy.inc  primitiveJetNode.inc  txEnv.c  txEnv.h
secp256k1/: README.md  extrakeys.h  field.h  field_10x26_impl.h  group_impl.h  modinv32.h  scalar.h  scalar_4x64_impl.h  scalar_impl.h  schnorrsig.h  secp256k1_impl.h
(+100 files in other folders)
