name:                Simplicity
version:             0.0.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
-- license-file:        LICENSE
author:              Russell O'Connor
maintainer:          roconnor@blockstream.io
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC ==8.2.1

library
  exposed-modules:     Simplicity.Ty, Simplicity.Term,
                       Simplicity.BitMachine, Simplicity.BitMachine.Authentic, Simplicity.BitMachine.Ty,
                       Simplicity.BitMachine.Translate, Simplicity.BitMachine.Translate.TCO,
                       Simplicity.BitMachine.StaticAnalysis, Simplicity.BitMachine.StaticAnalysis.TCO
                       Simplicity.Programs.Arith Simplicity.Programs.Bit Simplicity.Programs.Generic Simplicity.Programs.Sha256
  -- other-modules:       
  other-extensions:    GADTs, TypeOperators, DeriveTraversable
  hs-source-dirs:      Haskell
  default-language:    Haskell2010
  ghc-options:         -O2
  build-depends:       base >=4.9 && <4.11,
                       cryptohash-sha256 >=0.11 && <0.12,
                       lens-family >=1.2 && <1.3,
                       transformers >=0.5 && <0.6,
                       unification-fd >=0.10 && <0.11,
                       vector >=0.12 && <0.13

Test-Suite Simplicity-testsuite
  Type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      Haskell
  default-language:    Haskell2010
  ghc-options:         -O2 -fsimpl-tick-factor=107
  other-modules:       Simplicity.Ty, Simplicity.Term,
                       Simplicity.BitMachine, Simplicity.BitMachine.Authentic, Simplicity.BitMachine.Ty,
                       Simplicity.BitMachine.Translate, Simplicity.BitMachine.Translate.TCO,
                       Simplicity.BitMachine.StaticAnalysis, Simplicity.BitMachine.StaticAnalysis.TCO
                       Simplicity.Programs.Arith Simplicity.Programs.Bit Simplicity.Programs.Generic Simplicity.Programs.Sha256
                       Simplicity.BitMachine.StaticAnalysis.Tests, Simplicity.BitMachine.Tests, Simplicity.Programs.Tests
  build-depends:       base >=4.9 && <4.11,
                       bytestring >=0.10 && <0.11,
                       cryptohash-sha256 >=0.11 && <0.12,
                       lens-family >=1.2 && <1.3,
                       transformers >=0.5 && <0.6,
                       unification-fd >=0.10 && <0.11,
                       vector >=0.12 && <0.13,
                       QuickCheck >=2.9 && <2.10,
                       tasty >=0.11 && <0.12,
                       tasty-hunit >=0.9 && <0.10,
                       tasty-quickcheck >=0.8 && <0.9
