name:                Simplicity
version:             0.0.0
-- synopsis:            
-- description:         
license:             AllRightsReserved
-- license-file:        LICENSE
author:              Russell O'Connor
maintainer:          roconnor@blockstream.io
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC ==8.2.1

library
  exposed-modules:     Simplicity.Ty, Simplicity.Ty.Bit, Simplicity.Ty.Word,
                       Simplicity.Term, Simplicity.Term.Core,
                       Simplicity.Primitive, Simplicity.Primitive.Bitcoin, Simplicity.Primitive.Bitcoin.DataTypes
                       Simplicity.BitMachine, Simplicity.BitMachine.Authentic, Simplicity.BitMachine.Ty,
                       Simplicity.BitMachine.Translate, Simplicity.BitMachine.Translate.TCO,
                       Simplicity.BitMachine.StaticAnalysis, Simplicity.BitMachine.StaticAnalysis.TCO,
                       Simplicity.Programs.Word Simplicity.Programs.Bit Simplicity.Programs.Generic Simplicity.Programs.Sha256,
                       Simplicity.Digest, Simplicity.MerkleRoot, Simplicity.Semantics
                       Simplicity.Elaboration
                       Simplicity.Serialization Simplicity.Serialization.BitString Simplicity.Serialization.ByteString
  -- other-modules:       
  other-extensions:    GADTs, TypeOperators, DeriveTraversable
  hs-source-dirs:      Haskell
  default-language:    Haskell2010
  ghc-options:         -O2 -fsimpl-tick-factor=122
  build-depends:       array >=0.5 && <0.6,
                       base >=4.9 && <4.11,
                       binary >=0.7 && <0.9,
                       bytestring >=0.10 && <0.11,
                       cereal >=0.5 && <0.6,
                       containers >=0.5.10 && <0.6,
                       lens-family >=1.2 && <1.3,
                       mtl >=2.2 && <2.3,
                       MemoTrie >=0.6 && <0.7,
                       SHA >=1.6 && <1.7,
                       transformers >=0.5 && <0.6,
                       unification-fd >=0.10 && <0.11,
                       vector >=0.12 && <0.13

Test-Suite Simplicity-testsuite
  Type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      Haskell
  default-language:    Haskell2010
  ghc-options:         -O2 -fsimpl-tick-factor=122
  other-modules:       Simplicity.Ty, Simplicity.Ty.Bit, Simplicity.Ty.Word,
                       Simplicity.Term, Simplicity.Term.Core,
                       Simplicity.Primitive, Simplicity.Primitive.Bitcoin, Simplicity.Primitive.Bitcoin.DataTypes
                       Simplicity.BitMachine, Simplicity.BitMachine.Authentic, Simplicity.BitMachine.Ty,
                       Simplicity.BitMachine.Translate, Simplicity.BitMachine.Translate.TCO,
                       Simplicity.BitMachine.StaticAnalysis, Simplicity.BitMachine.StaticAnalysis.TCO,
                       Simplicity.Programs.Word Simplicity.Programs.Bit Simplicity.Programs.Generic Simplicity.Programs.Sha256,
                       Simplicity.Digest, Simplicity.MerkleRoot, Simplicity.Semantics
                       Simplicity.Elaboration
                       Simplicity.Serialization Simplicity.Serialization.BitString Simplicity.Serialization.ByteString
                       Simplicity.BitMachine.StaticAnalysis.Tests, Simplicity.BitMachine.Tests, Simplicity.Programs.Tests
                       Simplicity.Serialization.Tests, Simplicity.Ty.Tests
  build-depends:       array >=0.5 && <0.6,
                       base >=4.9 && <4.11,
                       binary >=0.7 && <0.9,
                       bytestring >=0.10 && <0.11,
                       cereal >=0.5 && <0.6,
                       containers >=0.5.10 && <0.6,
                       lens-family >=1.2 && <1.3,
                       mtl >=2.2 && <2.3,
                       MemoTrie >=0.6 && <0.7,
                       SHA >=1.6 && <1.7,
                       transformers >=0.5 && <0.6,
                       unification-fd >=0.10 && <0.11,
                       vector >=0.12 && <0.13,
                       QuickCheck >=2.9 && <2.11,
                       tasty >=0.11 && <1.1,
                       tasty-hunit >=0.9 && <0.11,
                       tasty-quickcheck >=0.8 && <0.10
