cabal-version:       2.2
name:                Simplicity
version:             0.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Russell O'Connor
maintainer:          roconnor@blockstream.com
copyright:           (c) 2018 Blockstream
category:            Language
build-type:          Simple
extra-source-files:  README.md
tested-with:         GHC ==8.6.4

library Simplicity-Core
  C-sources:           C/sha256.c, C/frame.c, C/jets.c, C/jets-secp256k1.c
                       Haskell/cbits/frame.c, Haskell/cbits/coreJets.c
  Include-dirs:        C
  Includes:            sha256.h, frame.h, jets.h
  exposed-modules:     Simplicity.Ty, Simplicity.Ty.Bit, Simplicity.Ty.Word, Simplicity.Ty.LibSecp256k1, Simplicity.Ty.Sha256,
                       Simplicity.Term.Core,
                       Simplicity.CoreJets,
                       Simplicity.Functor, Simplicity.Tensor,
                       Simplicity.FFI.Frame, Simplicity.FFI.Jets,
                       Simplicity.BitMachine, Simplicity.BitMachine.Authentic, Simplicity.BitMachine.Ty,
                       Simplicity.BitMachine.Translate, Simplicity.BitMachine.Translate.TCO,
                       Simplicity.BitMachine.StaticAnalysis, Simplicity.BitMachine.StaticAnalysis.TCO,
                       Simplicity.BitMachine.StaticAnalysis.Cost,
                       Simplicity.Programs.Bit, Simplicity.Programs.Generic, Simplicity.Programs.Loop,
                       Simplicity.Programs.Word, Simplicity.Programs.Arith,
                       Simplicity.Programs.Sha256, Simplicity.Programs.Sha256.Lib,
                       Simplicity.Programs.LibSecp256k1, Simplicity.Programs.LibSecp256k1.Lib,
                       Simplicity.Programs.CheckSig, Simplicity.Programs.CheckSig.Lib,
                       Simplicity.Programs.Bitcoin, Simplicity.Programs.Bitcoin.Lib,
                       Simplicity.Programs.Elements, Simplicity.Programs.Elements.Lib,
                       Simplicity.Programs.TimeLock,
                       Simplicity.Digest, Simplicity.Digest.Pure.SHA,
                       Simplicity.Tags,
                       Simplicity.Tree,
                       Simplicity.MerkleRoot, Simplicity.MerkleRoot.Impl,
                       Simplicity.Delegator, Simplicity.Delegator.Impl,
                       Simplicity.Serialization,
                       Simplicity.Word,
                       Simplicity.LibSecp256k1.Schnorr,
                       Simplicity.LibSecp256k1.Spec,
                       Simplicity.Bitcoin,
                       Simplicity.Benchmarks,
                       Simplicity.Weight
  other-extensions:    BangPatterns,
                       FlexibleContexts,
                       GADTs, StandaloneDeriving, TypeFamilies
                       NoMonomorphismRestriction,
                       UndecidableInstances, QuantifiedConstraints, RankNTypes, ExistentialQuantification, TypeOperators, TypeFamilies, DeriveTraversable,
                       ScopedTypeVariables,
                       RecordWildCards,
                       ForeignFunctionInterface
  hs-source-dirs:      Haskell/Core
  default-language:    Haskell2010
  ghc-options:         -O2
  build-depends:       base >=4.9 && <4.20,
                       binary >=0.7 && <0.9,
                       bytestring >=0.10 && <0.13,
                       containers >=0.5.10 && <0.7,
                       cereal >=0.5 && <0.6,
                       lens-family >=2.0 && <2.2,
                       mtl >=2.2 && <2.4,
                       MemoTrie >=0.6 && <0.7,
                       split >=0.2.3 && <0.3,
                       tardis >=0.4.1 && <0.6,
                       transformers >=0.5 && <0.7,
                       unification-fd >=0.10 && <0.12,
                       vector >=0.12 && <0.14

library Simplicity-Bitcoin
  exposed-modules:     Simplicity.Bitcoin.Primitive, Simplicity.Bitcoin.DataTypes
  other-extensions:    GADTs, ScopedTypeVariables
  hs-source-dirs:      Haskell/Bitcoin
  default-language:    Haskell2010
  ghc-options:         -O2
  build-depends:       Simplicity-Core,
                       base >=4.9 && <4.20,
                       bytestring >=0.10 && <0.13,
                       cereal >=0.5 && <0.6,
                       vector >=0.12 && <0.14

library Simplicity-Elements
  exposed-modules:     Simplicity.Elements.Primitive, Simplicity.Elements.DataTypes
  other-extensions:    GADTs, ScopedTypeVariables
  hs-source-dirs:      Haskell/Elements
  default-language:    Haskell2010
  ghc-options:         -O2
  build-depends:       Simplicity-Core,
                       base >=4.9 && <4.20,
                       bytestring >=0.10 && <0.13,
                       cereal >=0.5 && <0.6,
                       containers >=0.5.10 && <0.7,
                       lens-family >=2.0 && <2.2,
                       vector >=0.12 && <0.14

library Simplicity-Indef
  exposed-modules:     Simplicity.Term,
                       Simplicity.Semantics,
                       Simplicity.Dag, Simplicity.Inference
                       Simplicity.JetType,
                       Simplicity.Serialization.BitString, Simplicity.Serialization.ByteString,
                       Simplicity.StaticAnalysis.Cost
  signatures:          Simplicity.Primitive
  other-extensions:    EmptyCase, EmptyDataDecls, EmptyDataDeriving,
                       ScopedTypeVariables,
                       DeriveTraversable, FlexibleInstances, GADTs, TypeFamilies, MultiParamTypeClasses, RankNTypes,
                       UndecidableInstances
  hs-source-dirs:      Haskell/Indef
  default-language:    Haskell2010
  ghc-options:         -O2
  build-depends:       Simplicity-Core,
                       base >=4.9 && <4.20,
                       bytestring >=0.10 && <0.13,
                       cereal >=0.5 && <0.6,
                       containers >=0.5.10 && <0.7,
                       lens-family >=2.0 && <2.2,
                       mtl >=2.2 && <2.4,
                       transformers >=0.5 && <0.7,
                       unification-fd >=0.10 && <0.12,
                       vector >=0.12 && <0.14

library
  C-sources:           C/rsort.c C/elements/elementsJets.c C/elements/ops.c C/elements/env.c C/elements/txEnv.c
                       C/bitcoin/bitcoinJets.c C/bitcoin/ops.c C/bitcoin/env.c C/bitcoin/txEnv.c
                       Haskell/cbits/bitcoin/jets.c Haskell/cbits/bitcoin/env.c
                       Haskell/cbits/elements/jets.c Haskell/cbits/elements/env.c
  Include-dirs:        C C/include
  Includes:            elements/elementsJets.h elements/primitive.h simplicity/elements/env.h
  exposed-modules:     Simplicity.Bitcoin.Programs.SigHash, Simplicity.Bitcoin.Programs.SigHash.Lib,
                       Simplicity.Bitcoin.Programs.Transaction, Simplicity.Bitcoin.Programs.Transaction.Lib,
                       Simplicity.Bitcoin.Programs.TimeLock, Simplicity.Elements.Programs.TimeLock,
                       Simplicity.Elements.Programs.Issuance, Simplicity.Elements.Programs.Issuance.Lib,
                       Simplicity.Elements.Programs.SigHash, Simplicity.Elements.Programs.SigHash.Lib,
                       Simplicity.Elements.Programs.Transaction, Simplicity.Elements.Programs.Transaction.Lib,
                       Simplicity.Bitcoin.Jets, Simplicity.Elements.Jets,
                       Simplicity.Bitcoin.FFI.Env, Simplicity.Bitcoin.FFI.Jets,
                       Simplicity.Elements.FFI.Env, Simplicity.Elements.FFI.Jets
  reexported-modules:  Simplicity.Ty, Simplicity.Ty.Bit, Simplicity.Ty.Word, Simplicity.Ty.LibSecp256k1, Simplicity.Ty.Sha256,
                       Simplicity.Term.Core,
                       Simplicity.CoreJets,
                       Simplicity.Functor, Simplicity.Tensor,
                       Simplicity.FFI.Jets,
                       Simplicity.BitMachine, Simplicity.BitMachine.Authentic, Simplicity.BitMachine.Ty,
                       Simplicity.BitMachine.Translate, Simplicity.BitMachine.Translate.TCO,
                       Simplicity.BitMachine.StaticAnalysis, Simplicity.BitMachine.StaticAnalysis.TCO,
                       Simplicity.BitMachine.StaticAnalysis.Cost,
                       Simplicity.Programs.Bit, Simplicity.Programs.Generic, Simplicity.Programs.Loop,
                       Simplicity.Programs.Word, Simplicity.Programs.Arith,
                       Simplicity.Programs.Sha256, Simplicity.Programs.Sha256.Lib,
                       Simplicity.Programs.LibSecp256k1, Simplicity.Programs.LibSecp256k1.Lib,
                       Simplicity.Programs.CheckSig, Simplicity.Programs.CheckSig.Lib,
                       Simplicity.Programs.Bitcoin, Simplicity.Programs.Bitcoin.Lib,
                       Simplicity.Programs.Elements, Simplicity.Programs.Elements.Lib,
                       Simplicity.Programs.TimeLock,
                       Simplicity.Digest,
                       Simplicity.Tags,
                       Simplicity.Tree,
                       Simplicity.MerkleRoot,
                       Simplicity.Delegator,
                       Simplicity.Serialization,
                       Simplicity.Word,
                       Simplicity.LibSecp256k1.Schnorr,
                       Simplicity.LibSecp256k1.Spec,
                       Simplicity.Bitcoin,
                       Simplicity.Bitcoin.Primitive, Simplicity.Bitcoin.DataTypes,
                       Simplicity.Bitcoin.Term,
                       Simplicity.Bitcoin.Semantics,
                       Simplicity.Bitcoin.Dag,
                       Simplicity.Bitcoin.Inference,
                       Simplicity.Bitcoin.JetType,
                       Simplicity.Bitcoin.Serialization.BitString,
                       Simplicity.Bitcoin.Serialization.ByteString,
                       Simplicity.Elements.Primitive, Simplicity.Elements.DataTypes,
                       Simplicity.Elements.Term,
                       Simplicity.Elements.Semantics,
                       Simplicity.Elements.Dag,
                       Simplicity.Elements.Inference,
                       Simplicity.Elements.JetType,
                       Simplicity.Elements.Serialization.BitString,
                       Simplicity.Elements.Serialization.ByteString,
                       Simplicity.Elements.StaticAnalysis.Cost,
                       Simplicity.Weight
  mixins:              Simplicity-Indef
                         (Simplicity.Term as Simplicity.Bitcoin.Term,
                          Simplicity.Semantics as Simplicity.Bitcoin.Semantics,
                          Simplicity.Dag as Simplicity.Bitcoin.Dag,
                          Simplicity.Inference as Simplicity.Bitcoin.Inference,
                          Simplicity.JetType as Simplicity.Bitcoin.JetType,
                          Simplicity.Serialization.BitString as Simplicity.Bitcoin.Serialization.BitString,
                          Simplicity.Serialization.ByteString as Simplicity.Bitcoin.Serialization.ByteString,
                          Simplicity.StaticAnalysis.Cost as Simplicity.Bitcoin.StaticAnalysis.Cost)
                       requires
                         (Simplicity.Primitive as Simplicity.Bitcoin.Primitive),
                       Simplicity-Indef
                         (Simplicity.Term as Simplicity.Elements.Term,
                          Simplicity.Semantics as Simplicity.Elements.Semantics,
                          Simplicity.Dag as Simplicity.Elements.Dag,
                          Simplicity.Inference as Simplicity.Elements.Inference,
                          Simplicity.JetType as Simplicity.Elements.JetType,
                          Simplicity.Serialization.BitString as Simplicity.Elements.Serialization.BitString,
                          Simplicity.Serialization.ByteString as Simplicity.Elements.Serialization.ByteString,
                          Simplicity.StaticAnalysis.Cost as Simplicity.Elements.StaticAnalysis.Cost)
                       requires
                         (Simplicity.Primitive as Simplicity.Elements.Primitive)
  other-extensions:    ConstraintKinds, GADTs, StandaloneDeriving, TypeFamilies
  hs-source-dirs:      Haskell
  default-language:    Haskell2010
  ghc-options:         -O2
  build-depends:       Simplicity-Core, Simplicity-Bitcoin, Simplicity-Elements, Simplicity-Indef,
                       base >=4.9 && <4.20,
                       bytestring >=0.10 && <0.13,
                       cereal >=0.5 && <0.6,
                       containers >=0.5.10 && <0.7,
                       lens-family >=2.0 && <2.2,
                       vector >=0.12 && <0.14

Test-Suite testsuite
  Type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  other-extensions:    RankNTypes,
                       GADTs,
                       ScopedTypeVariables
  hs-source-dirs:      Haskell/Tests
  default-language:    Haskell2010
  ghc-options:         -threaded -O0 -with-rtsopts=-c
  other-modules:       Simplicity.Programs.Example,
                       Simplicity.Bip0340,
                       Simplicity.Arbitrary, Simplicity.Ty.Arbitrary, Simplicity.Bitcoin.Arbitrary, Simplicity.Elements.Arbitrary,
                       Simplicity.BitMachine.StaticAnalysis.Tests, Simplicity.BitMachine.Tests,
                       Simplicity.Bitcoin.FFI.Primitive,
                       Simplicity.Bitcoin.TestEval, Simplicity.Bitcoin.Tests, Simplicity.Bitcoin.FFI.Tests,
                       Simplicity.Bitcoin.Serialization.Tests,
                       Simplicity.FFI.Bitstream, Simplicity.FFI.Dag,
                       Simplicity.Elements.FFI.Primitive,
                       Simplicity.Elements.TestEval, Simplicity.Elements.Tests, Simplicity.Elements.FFI.Tests,
                       Simplicity.Elements.Regression, Simplicity.Elements.Serialization.Tests,
                       Simplicity.FFI.Tests,
                       Simplicity.Programs.Tests,
                       Simplicity.Serialization.Tests,
                       Simplicity.TestCoreEval,
                       Simplicity.Ty.Tests
  C-sources:           C/rsort.c, C/dag.c, C/bitstream.c
                       C/bitcoin/primitive.c
                       C/elements/primitive.c
                       Haskell/cbits/bitstream.c, Haskell/cbits/dag.c
  build-depends:       Simplicity,
                       base >=4.9 && <4.20,
                       bytestring >=0.10 && <0.13,
                       cereal >=0.5 && <0.6,
                       containers >=0.5.10 && <0.7,
                       lens-family >=2.0 && <2.2,
                       QuickCheck >=2.10 && <2.16,
                       mtl >=2.2 && <2.4,
                       tasty >=0.11 && <1.6,
                       tasty-hunit >=0.9 && <0.11,
                       tasty-quickcheck >=0.8 && <0.12,
                       transformers >=0.5 && <0.7,
                       vector >=0.12 && <0.14

executable GenDecodeJet
    main-is:          GenDecodeJet.hs
    ghc-options:      -main-is GenDecodeJet

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   Haskell-Generate
    default-language: Haskell2010
    other-modules:    NameWrangler
    build-depends:    Simplicity,
                      base >=4.9 && <4.20,
                      prettyprinter >=1.7 && <1.8,
                      split >=0.2.3 && <0.3,

executable GenPrecomputed
    main-is:          GenPrecomputed.hs
    ghc-options:      -main-is GenPrecomputed

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   Haskell-Generate
    default-language: Haskell2010
    build-depends:    Simplicity,
                      base >=4.9 && <4.20,
                      prettyprinter >=1.7 && <1.8,
                      split >=0.2.3 && <0.3,

executable GenPrimitive
    main-is:          GenPrimitive.hs
    ghc-options:      -main-is GenPrimitives

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   Haskell-Generate
    default-language: Haskell2010
    other-modules:    NameWrangler
    build-depends:    Simplicity,
                      base >=4.9 && <4.20,
                      containers >=0.5.10 && <0.7,
                      mtl >=2.2 && <2.4,
                      split >=0.2.3 && <0.3,
                      unification-fd >=0.10 && <0.12,

executable GenTests
    main-is:          GenTests.hs
    ghc-options:      -main-is GenTests

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   Haskell-Generate
    default-language: Haskell2010
    build-depends:    Simplicity,
                      base >=4.9 && <4.20,
                      bytestring >=0.10 && <0.13,
                      cereal >=0.5 && <0.6,
                      lens-family >=2.0 && <2.2,
                      split >=0.2.3 && <0.3,
                      vector >=0.12 && <0.14,
executable GenRustJets
    main-is:          GenRustJets.hs
    ghc-options:      -main-is GenRustJets

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   Haskell-Generate
    default-language: Haskell2010
    other-modules:    NameWrangler
    other-extensions: OverloadedStrings
    build-depends:    Simplicity,
                      base >=4.9 && <4.20,
                      containers >=0.5.10 && <0.7,
                      prettyprinter >=1.7 && <1.8,
                      split >=0.2.3 && <0.3,
                      transformers >=0.5 && <0.7,
                      unification-fd >=0.10 && <0.12,
executable TestnetTransaction
    main-is:          TestnetTransaction.hs
    ghc-options:      -main-is TestnetTransaction

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   Haskell-Examples
    default-language: Haskell2010
    build-depends:    Simplicity,
                      array >=0.5 && <0.6,
                      base >=4.9 && <4.20,
                      bytestring >=0.10 && <0.13,
                      cereal >=0.5 && <0.6,
                      entropy >=0.4 && <0.5,
                      lens-family >=2.0 && <2.2,
                      vector >=0.12 && <0.14,
